<resources>
    <string name="app_name">DokuBank</string>
    <string name="register">Kayıt Ol</string>
    <string name="login">Giriş Yap</string>
    <string name="username">Kullanıcı Adı</string>
    <string name="password">Parola</string>
    <string name="dont_have_an_account_nregister_here">Hesabınız yok mu? Hemen oluştur</string>
    <string name="already_registered_nlogin_here">Zaten üye misiniz? Buraya tıklayın</string>
    <string name="firstname">İsim</string>
    <string name="surname">Soyisim</string>
    <string name="email">E-mail</string>
    <string name="telephone_number">Telefon numarası</string>
    <string name="title_activity_bottom_navigator">bottomNavigator</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="locationName">Konum Adı</string>

    <string-array name="FilterOptions">
        <item>Doku Türü</item>
        <item>Şehir</item>
        <item>İsim</item>
    </string-array>

    <string-array name="bloodType_arrays">
        <item>ABRh+</item>
        <item>ABRh-</item>
        <item>ARh+</item>
        <item>ARh-</item>
        <item>BRh+</item>
        <item>BRh-</item>
        <item>0Rh+</item>
        <item>0Rh-</item>
    </string-array>

    <string-array name="TissueType">
        <item>Trombosit</item>
        <item>Organ</item>
        <item>Kan</item>
    </string-array>

    <string-array name="city_array">
        <item>Adana</item>
        <item>Adıyaman</item>
        <item>Afyonkarahisar</item>
        <item>Ağrı</item>
        <item>Amasya</item>
        <item>Ankara</item>
        <item>Antalya</item>
        <item>Artvin</item>
        <item>Aydın</item>
        <item>Balıkesir</item>
        <item>Bilecik</item>
        <item>Bingöl</item>
        <item>Bitlis</item>
        <item>Bolu</item>
        <item>Burdur</item>
        <item>Bursa</item>
        <item>Çanakkale</item>
        <item>Çankırı</item>
        <item>Çorum</item>
        <item>Denizli</item>
        <item>Diyarbakır</item>
        <item>Edirne</item>
        <item>Elazığ</item>
        <item>Erzincan</item>
        <item>Erzurum</item>
        <item>Eskişehir</item>
        <item>Gaziantep</item>
        <item>Giresun</item>
        <item>Gümüşhane</item>
        <item>Hakkâri</item>
        <item>Hatay</item>
        <item>Isparta</item>
        <item>İçel (Mersin)</item>
        <item>İstanbul</item>
        <item>İzmir</item>
        <item>Kars</item>
        <item>Kastamonu</item>
        <item>Kayseri</item>
        <item>Kırklareli</item>
        <item>Kırşehir</item>
        <item>Kocaeli</item>
        <item>Konya</item>
        <item>Kütahya</item>
        <item>Malatya</item>
        <item>Manisa</item>
        <item>Kahramanmaraş</item>
        <item>Mardin</item>
        <item>Muğla</item>
        <item>Muş</item>
        <item>Nevşehir</item>
        <item>Niğde</item>
        <item>Ordu</item>
        <item>Rize</item>
        <item>Sakarya</item>
        <item>Samsun</item>
        <item>Siirt</item>
        <item>Sinop</item>
        <item>Sivas</item>
        <item>Tekirdağ</item>
        <item>Tokat</item>
        <item>Trabzon</item>
        <item>Tunceli</item>
        <item>Şanlıurfa</item>
        <item>Uşak</item>
        <item>Van</item>
        <item>Yozgat</item>
        <item>Zonguldak</item>
        <item>Aksaray</item>
        <item>Bayburt</item>
        <item>Karaman</item>
        <item>Kırıkkale</item>
        <item>Batman</item>
        <item>Şırnak</item>
        <item>Bartın</item>
        <item>Ardahan</item>
        <item>Iğdır</item>
        <item>Yalova</item>
        <item>Karabük</item>
        <item>Kilis</item>
        <item>Osmaniye</item>
        <item>Düzce</item>
    </string-array>
    <string name="title_activity_temp">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
