<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/register_scroolview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/sweetgrey"
            android:padding="10dp">


            <EditText
                android:id="@+id/editTextUsername"
                style="@android:style/Widget.Material.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/username"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextFirstName"
                style="@android:style/Widget.Material.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/firstname"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextSurName"
                style="@android:style/Widget.Material.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/surname"
                android:inputType="text" />

            <EditText
                android:id="@+id/editTextEmail"
                style="@android:style/Widget.Material.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/editTextPassword"
                style="@android:style/Widget.Material.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/password"
                android:inputType="textPassword" />


            <EditText
                android:id="@+id/editTextTelephone"
                style="@android:style/Widget.Material.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:hint="@string/telephone_number"
                android:inputType="phone" />
            <Button
                android:id="@+id/buttonRegister"
                style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                android:text="@string/register"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textViewLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/already_registered_nlogin_here"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.Material.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

</RelativeLayout>

